--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -2,8 +2,10 @@
 @import "core/reset";
 @import "core/helpers";
 @import "core/buttons";
+@import "core/reused";
 
 @import "layout/header";
 @import "layout/footer";
 
 @import "sections/hero";
+@import "sections/upcoming";
