--- a/assets/scss/sections/_upcoming.scss
+++ b/assets/scss/sections/_upcoming.scss
@@ -61,5 +61,29 @@
         color: var(--emerald);
       }
     }
+
+    &-meta {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 10px;
+
+      .badge {
+        color: var(--emerald);
+      }
+      .duration {
+        margin-left: auto;
+      }
+      .duration,
+      .rating {
+        color: var(--gainsboro);
+        font-size: var(--fs-11);
+        font-weight: var(--fw-500);
+        ion-icon {
+          font-size: 15px;
+          color: var(--emerald);
+        }
+      }
+    }
   }
 }
