--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -190,6 +190,32 @@ h3 {
   visibility: visible;
 }
 
+.badge {
+  color: var(--white);
+  font-size: var(--fs-11);
+  font-weight: var(--fw-700);
+  border: 2px solid transparent;
+  padding: 3px 10px;
+}
+.badge-fill {
+  background: var(--white);
+  color: var(--raisin-black);
+}
+.badge-outline {
+  border-color: var(--white);
+}
+
+.section-title {
+  font-size: var(--fs-2);
+  text-align: center;
+}
+
+.flex-center {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
 .header {
   position: fixed;
   top: 0;
@@ -315,4 +341,117 @@ h3 {
   font-size: var(--fs-10);
   font-weight: var(--fw-500);
   margin-top: 10px;
+}
+
+.upcoming {
+  background: url(../../images/upcoming-bg.png) no-repeat cover center;
+  padding-block: var(--section-padding);
+}
+.upcoming__wrapper {
+  padding-inline: 15px;
+}
+.upcoming__list {
+  display: grid;
+  gap: 20px;
+  height: 100%;
+  margin-top: 40px;
+}
+.upcoming__list > li {
+  min-width: 100%;
+  scroll-snap-align: start;
+}
+.upcoming__list.scrollbar {
+  display: flex;
+  justify-content: flex-start;
+  gap: 30px;
+  overflow-x: auto;
+  scroll-snap-type: inline mandatory;
+  padding-bottom: 25px;
+}
+.upcoming__list.scrollbar::-webkit-scrollbar {
+  margin: 0;
+}
+.upcoming__list.scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+  box-shadow: 0 0 0 2px var(--emerald);
+  border-radius: 10px;
+}
+.upcoming__list.scrollbar::-webkit-scrollbar-thumb {
+  background: var(--gainsboro);
+  box-shadow: inset 0 1px 0 var(--black) inset 0 -1px 0 var(--black);
+  border-radius: 10px;
+}
+.upcoming__item {
+  display: flex;
+  flex-direction: column;
+}
+.upcoming__item-banner {
+  position: relative;
+  background: var(--gunmetal-1);
+  aspect-ratio: 2/3;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-bottom: 20px;
+  transition: var(--transition-1);
+}
+.upcoming__item-banner::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  transition: var(--transition-1);
+}
+.upcoming__item-banner:hover {
+  box-shadow: 0 1px 2px hsla(0deg, 0%, 0%, 0.5);
+}
+.upcoming__item-banner:hover::after {
+  background: hsla(0deg, 0%, 100%, 0.05);
+}
+.upcoming__item-banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.upcoming__item-content {
+  display: flex;
+  justify-content: space-between;
+}
+.upcoming__item-content time {
+  font-size: var(--fs-8);
+  color: var(--emerald);
+  font-weight: var(--fw-500);
+}
+.upcoming__item-title {
+  font-size: var(--fs-6);
+  font-weight: var(--fw-500);
+  color: var(--white);
+  margin-bottom: 10px;
+  transition: var(--transition-1);
+}
+.upcoming__item-title:hover {
+  color: var(--emerald);
+}
+.upcoming__item-meta {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 10px;
+}
+.upcoming__item-meta .badge {
+  color: var(--emerald);
+}
+.upcoming__item-meta .duration {
+  margin-left: auto;
+}
+.upcoming__item-meta .duration,
+.upcoming__item-meta .rating {
+  display: flex;
+  gap: 5px;
+  color: var(--gainsboro);
+  font-size: var(--fs-11);
+  font-weight: var(--fw-500);
+}
+.upcoming__item-meta .duration ion-icon,
+.upcoming__item-meta .rating ion-icon {
+  font-size: 15px;
+  color: var(--emerald);
 }/*# sourceMappingURL=app.css.map */
