--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -124,12 +124,12 @@ h3 {
 .overlay {
   position: fixed;
   inset: 0;
-  background: hsla(204deg, 18%, 11%, 0.6);
+  background: hsla(204deg, 18%, 11%, 0.7);
   opacity: 0;
   z-index: 1;
   pointer-events: none;
 }
-.overlay.activ {
+.overlay.active {
   opacity: 1;
   pointer-events: all;
 }
@@ -298,7 +298,7 @@ h3 {
 }
 
 .hero {
-  background-image: url("/assets/images/hero-bg.jpg");
+  background-image: url("/assets/images/hero-bg.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -454,4 +454,61 @@ h3 {
 .upcoming__item-meta .rating ion-icon {
   font-size: 15px;
   color: var(--emerald);
+}
+
+.service__wrapper {
+  padding-inline: 15px;
+}
+.service__content {
+  margin-bottom: 20px;
+}
+.service__subtitle {
+  position: relative;
+  margin-bottom: 15px;
+  text-transform: uppercase;
+  font-size: var(--fs-11);
+  font-weight: var(--fw-500);
+  color: var(--gainsboro);
+  padding-left: 40px;
+}
+.service__subtitle::before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 0;
+  width: 45px;
+  height: 2px;
+  background-color: var(--emerald);
+}
+.service__title {
+  margin-bottom: 20px;
+}
+.service__text, .service__item-text {
+  color: var(--gray-x);
+  font-size: var(--fs-9);
+  font-weight: var(--fw-500);
+  line-height: 1.8;
+}
+.service__list {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+.service__item-icon {
+  display: grid;
+  place-items: center;
+  color: var(--white);
+  font-size: 40px;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  outline: 1px dashed var(--emerald);
+  margin-bottom: 20px;
+  transition: var(--transition-2);
+}
+.service__item:hover .service__item-icon {
+  background: var(--emerald);
+}
+.service__item-title {
+  margin-bottom: 15px;
 }/*# sourceMappingURL=app.css.map */
