--- a/assets/scss/core/_helpers.scss
+++ b/assets/scss/core/_helpers.scss
@@ -1,12 +1,12 @@
 .overlay {
   position: fixed;
   inset: 0;
-  background: hsla(204, 18, 11, 0.6);
+  background: hsla(204, 18, 11, 0.7);
   opacity: 0;
   z-index: 1;
   pointer-events: none;
 
-  &.activ {
+  &.active {
     opacity: 1;
     pointer-events: all;
   }
