--- a/assets/scss/sections/_hero.scss
+++ b/assets/scss/sections/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  background-image: url("/assets/images/hero-bg.jpg");
+  background-image: url("/assets/images/hero-bg.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -18,9 +18,11 @@
       margin-top: 30px;
     }
   }
+
   &__content {
     margin-top: 20px;
   }
+
   &__subtitle {
     color: var(--emerald);
     font-size: var(--fs-5);
@@ -30,6 +32,7 @@
       margin-left: 2px;
     }
   }
+
   &__title {
     font-size: var(--fs-1);
     font-weight: var(--fw-700);
@@ -38,6 +41,7 @@
       color: var(--emerald);
     }
   }
+  
   &__text {
     color: var(--white);
     font-size: var(--fs-10);
