--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -456,6 +456,10 @@ h3 {
   color: var(--emerald);
 }
 
+.service {
+  background: url("../images/service-bg.jpg") no-repeat cover center;
+  padding-block: var(--section-padding);
+}
 .service__wrapper {
   padding-inline: 15px;
 }
@@ -469,12 +473,12 @@ h3 {
   font-size: var(--fs-11);
   font-weight: var(--fw-500);
   color: var(--gainsboro);
-  padding-left: 40px;
+  padding-left: 50px;
 }
 .service__subtitle::before {
   content: "";
   position: absolute;
-  top: 5px;
+  top: 8px;
   left: 0;
   width: 45px;
   height: 2px;
