--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -515,4 +515,123 @@ h3 {
 }
 .service__item-title {
   margin-bottom: 15px;
+}
+
+.series {
+  background: url("../images/series-bg.jpg") no-repeat center center/cover;
+  padding-block: var(--section-padding);
+}
+.series__wrapper {
+  padding-inline: 15px;
+}
+.series__list {
+  display: grid;
+  gap: 20px;
+  height: 100%;
+  margin-top: 40px;
+}
+.series__list > li {
+  min-width: 100%;
+  scroll-snap-align: start;
+  border-radius: 50px;
+  overflow: hidden;
+}
+.series__list.scrollbar {
+  display: flex;
+  justify-content: flex-start;
+  gap: 30px;
+  overflow-x: auto;
+  scroll-snap-type: inline mandatory;
+  padding-bottom: 25px;
+}
+.series__list.scrollbar::-webkit-scrollbar {
+  margin: 0;
+}
+.series__list.scrollbar::-webkit-scrollbar-track {
+  background: transparent;
+  box-shadow: 0 0 0 2px var(--emerald);
+  border-radius: 10px;
+}
+.series__list.scrollbar::-webkit-scrollbar-thumb {
+  background: var(--gainsboro);
+  box-shadow: inset 0 1px 0 var(--black) inset 0 -1px 0 var(--black);
+  border-radius: 10px;
+}
+.series__item {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
+.series__item-banner {
+  position: relative;
+  background: var(--gunmetal-1);
+  aspect-ratio: 2/3;
+  border-radius: 5px;
+  overflow: hidden;
+  max-height: 500px;
+  transition: var(--transition-1);
+}
+.series__item-banner::after {
+  content: "";
+  position: absolute;
+  inset: 0;
+  transition: var(--transition-1);
+}
+.series__item-banner:hover {
+  box-shadow: 0 1px 2px hsla(0deg, 0%, 0%, 0.5);
+}
+.series__item-banner:hover::after {
+  background: hsla(0deg, 0%, 100%, 0.05);
+}
+.series__item-banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.series__item-content {
+  position: absolute;
+  bottom: 55px;
+  left: 55px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.series__item-content time {
+  font-size: var(--fs-8);
+  color: var(--white);
+  font-weight: var(--fw-500);
+}
+.series__item-title {
+  font-size: var(--fs-4);
+  font-weight: var(--fw-500);
+  color: var(--white);
+  transition: var(--transition-1);
+}
+.series__item-title:hover {
+  color: var(--emerald);
+}
+.series__item-btn {
+  font-size: var(--fs-6);
+  background-color: rgba(255, 0, 0, 0.411);
+  width: max-content;
+  padding: 10px 20px;
+  border-radius: 99999px;
+  color: var(--white);
+  margin-top: 10px;
+}
+.series__item .rating {
+  position: absolute;
+  top: 30px;
+  left: 20px;
+  display: flex;
+  align-items: center;
+  background: var(--black);
+  max-width: max-content;
+  padding: 5px 10px;
+  border-radius: 20px;
+  gap: 5px;
+  color: var(--white);
+}
+.series__item .rating ion-icon {
+  color: yellow;
 }/*# sourceMappingURL=app.css.map */
