--- a/assets/scss/sections/_hero.scss
+++ b/assets/scss/sections/_hero.scss
@@ -1,8 +1,5 @@
 .hero {
-  background-image: url("/assets/images/hero-bg.png");
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  background: url("/assets/images/hero-bg.png") no-repeat center center/cover;
   height: 100vh;
   min-height: 700px;
   max-width: 1000px;
@@ -41,7 +38,7 @@
       color: var(--emerald);
     }
   }
-  
+
   &__text {
     color: var(--white);
     font-size: var(--fs-10);
