--- a/assets/scss/sections/_service.scss
+++ b/assets/scss/sections/_service.scss
@@ -1,5 +1,5 @@
 .service {
-  background: url("../images/service-bg.jpg") no-repeat cover center;
+  background: url("../images/service-bg.jpg") no-repeat center center/cover;
   padding-block: var(--section-padding);
 
   &__wrapper {
