--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -572,18 +572,18 @@ h3 {
   content: "";
   position: absolute;
   inset: 0;
-  transition: var(--transition-1);
-}
-.series__item-banner:hover {
-  box-shadow: 0 1px 2px hsla(0deg, 0%, 0%, 0.5);
+  transform: translateX(-100%);
+  transition: var(--transition-2);
 }
 .series__item-banner:hover::after {
-  background: hsla(0deg, 0%, 100%, 0.05);
+  transform: translateX(0%);
+  background-color: var(--emerald);
+  opacity: 30%;
 }
 .series__item-banner img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 .series__item-content {
   position: absolute;
@@ -597,12 +597,17 @@ h3 {
   font-size: var(--fs-8);
   color: var(--white);
   font-weight: var(--fw-500);
+  background-color: rgba(0, 0, 0, 0.4);
+  max-width: max-content;
+  padding: 5px 8px;
 }
 .series__item-title {
   font-size: var(--fs-4);
   font-weight: var(--fw-500);
   color: var(--white);
   transition: var(--transition-1);
+  background-color: rgba(0, 0, 0, 0.4);
+  padding: 5px 8px;
 }
 .series__item-title:hover {
   color: var(--emerald);
