--- a/assets/scss/sections/_series.scss
+++ b/assets/scss/sections/_series.scss
@@ -61,20 +61,22 @@
         content: "";
         position: absolute;
         inset: 0;
-        transition: var(--transition-1);
+        transform: translateX(-100%);
+        transition: var(--transition-2);
       }
 
       &:hover {
-        box-shadow: 0 1px 2px hsl(0, 0%, 0%, 0.5);
         &::after {
-          background: hsl(0, 0%, 100%, 0.05);
+          transform: translateX(0%);
+          background-color: var(--emerald);
+          opacity: 30%;
         }
       }
 
       img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: contain;
       }
     }
 
@@ -89,6 +91,9 @@
         font-size: var(--fs-8);
         color: var(--white);
         font-weight: var(--fw-500);
+        background-color: rgba(0, 0, 0, 0.4);
+        max-width: max-content;
+        padding: 5px 8px;
       }
     }
 
@@ -97,6 +102,8 @@
       font-weight: var(--fw-500);
       color: var(--white);
       transition: var(--transition-1);
+      background-color: rgba(0, 0, 0, 0.4);
+      padding: 5px 8px;
       &:hover {
         color: var(--emerald);
       }
