--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -575,23 +575,20 @@ h3 {
   transform: translateX(-100%);
   transition: var(--transition-2);
 }
-.series__item-banner:hover::after {
-  transform: translateX(0%);
-  background-color: var(--emerald);
-  opacity: 30%;
-}
 .series__item-banner img {
   width: 100%;
   height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
 .series__item-content {
   position: absolute;
   bottom: 55px;
   left: 55px;
   display: flex;
+  transform: translateY(200%);
   flex-direction: column;
   gap: 10px;
+  transition: 1s var(--transition-1);
 }
 .series__item-content time {
   font-size: var(--fs-8);
@@ -636,4 +633,12 @@ h3 {
 }
 .series__item .rating ion-icon {
   color: yellow;
+}
+.series__item:hover .series__item-banner::after {
+  transform: translateX(0%);
+  background-color: var(--emerald);
+  opacity: 30%;
+}
+.series__item:hover .series__item-content {
+  transform: translateY(0%);
 }/*# sourceMappingURL=app.css.map */
