--- a/assets/scss/sections/_upcoming.scss
+++ b/assets/scss/sections/_upcoming.scss
@@ -1,5 +1,5 @@
 .upcoming {
-  background: url(../../images/upcoming-bg.png) no-repeat cover center;
+  background: url(../../images/upcoming-bg.png) no-repeat center center/cover;
   padding-block: var(--section-padding);
 
   &__wrapper {
