--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -644,4 +644,49 @@ h3 {
 }
 .series__item:hover .rating {
   transform: translateY(0%);
+}
+
+.cta {
+  background: url("/assets/images/cta-bg.png") no-repeat center center/cover;
+  padding-block: var(--section-padding);
+  text-align: center;
+  padding-block: 50px;
+}
+.cta__wrapper {
+  padding-inline: 15px;
+}
+.cta__content {
+  margin-bottom: 25px;
+}
+.cta__title {
+  color: var(--eerie-black);
+  font-size: var(--fs-3);
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+.cta__text {
+  color: var(--eerie-black);
+  font-weight: var(--fw-500);
+}
+.cta__form-input {
+  font-size: var(--fs-9);
+  color: var(--eerie-black);
+  box-sizing: 0 5px 5px hsla(0deg, 0%, 0%, 0.3);
+  padding: 20px 30px;
+  border-radius: 5px;
+  margin-bottom: 15px;
+}
+.cta__form-btn {
+  background: var(--eerie-black);
+  color: var(--emerald);
+  font-weight: var(--fw-500);
+  padding: 15px 25px;
+  margin-inline: auto;
+  text-transform: uppercase;
+  transition: var(--transition-2);
+}
+.cta__form-btn:hover {
+  background: transparent;
+  border: 1px solid var(--eerie-black);
+  color: var(--eerie-black);
 }/*# sourceMappingURL=app.css.map */
