--- a/assets/scss/core/_reused.scss
+++ b/assets/scss/core/_reused.scss
@@ -8,3 +8,11 @@
   align-items: center;
   gap: 5px;
 }
+
+@mixin flex-center {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
