--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2,8 +2,7 @@
   /**
      * colors
      */
-  --rich-black-fogra-29: hsl(225, 25%, 9%);
-  --rich-black-fogra-39: hsl(170, 21%, 5%);
+  --rich-black: hsl(225, 25%, 9%);
   --raisin-black: hsl(228, 13%, 15%);
   --eerie-black: hsl(207, 19%, 11%);
   --light-gray: hsl(0, 3%, 80%);
@@ -132,6 +131,13 @@ h3 {
 .overlay.active {
   opacity: 1;
   pointer-events: all;
+}
+
+.divider {
+  height: 5px;
+  margin-block: 40px;
+  border-top: 1px solid var(--rich-black);
+  border-bottom: 1px solid hsla(0deg, 0%, 100%, 0.1);
 }
 
 .btn {
@@ -295,6 +301,76 @@ h3 {
 }
 .header__wrapper .navbar__social-item:is(:hover, :focus):nth-child(3) {
   background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+}
+
+.footer {
+  background: url("/assets/images/footer-bg.jpg") no-repeat center center/cover;
+  padding-block: 80px 50px;
+}
+.footer__brand-logo {
+  width: max-content;
+  margin-inline: auto;
+  margin-bottom: 50px;
+}
+.footer__brand-logo img {
+  width: 50px;
+}
+.footer__brand-logo h5 {
+  font-size: 18px;
+}
+.footer__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+.footer__list > li > a {
+  color: var(--light-gray);
+  font-size: var(--fs-9);
+  font-weight: var(--fw-700);
+  text-transform: uppercase;
+  padding: 5px 15px;
+  transition: var(--transition-2);
+}
+.footer__list > li > a:hover {
+  color: var(--emerald);
+}
+.footer .quicklink__list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 20px;
+}
+.footer .quicklink__list > li > a {
+  color: var(--gray-x);
+  font-size: var(--fs-10);
+  font-weight: var(--fw-500);
+  text-transform: uppercase;
+  padding: 5px 10px;
+  transition: var(--transition-2);
+}
+.footer .quicklink__list > li > a:hover {
+  color: var(--emerald);
+}
+.footer .quicklink__social {
+  display: flex;
+  justify-content: center;
+  column-gap: 10px;
+}
+.footer .quicklink__social-link {
+  color: var(--gray-x);
+  background: var(--rich-black);
+  font-size: 15px;
+  width: 35px;
+  height: 35px;
+  display: grid;
+  place-items: center;
+  border-radius: 50%;
+  box-shadow: inset 0 4px 8px hsla(0deg, 0%, 0%, 0.2);
+  transition: var(--transition-2);
 }
 
 .hero {
