--- a/assets/scss/core/_variables.scss
+++ b/assets/scss/core/_variables.scss
@@ -3,8 +3,7 @@
      * colors
      */
 
-  --rich-black-fogra-29: hsl(225, 25%, 9%);
-  --rich-black-fogra-39: hsl(170, 21%, 5%);
+  --rich-black: hsl(225, 25%, 9%);
   --raisin-black: hsl(228, 13%, 15%);
   --eerie-black: hsl(207, 19%, 11%);
   --light-gray: hsl(0, 3%, 80%);
