--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -765,4 +765,68 @@ h3 {
   background: transparent;
   border: 1px solid var(--eerie-black);
   color: var(--eerie-black);
+}
+
+.movie-details {
+  padding-block: var(--section-padding);
+  padding-inline: 25px;
+}
+.movie-details__banner {
+  position: relative;
+  max-width: 350px;
+  overflow: hidden;
+  border-radius: 5px;
+  margin-inline: auto;
+  margin-bottom: 30px;
+}
+.movie-details__banner .play-btn {
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  position: absolute;
+  inset: 0;
+  color: var(--white);
+  font-size: 120px;
+  transition: var(--transition-2);
+}
+.movie-details__banner .play-btn:hover {
+  background: hsla(0deg, 0%, 0%, 0.2);
+}
+.movie-details__banner img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.movie-details__content {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+.movie-details__title {
+  color: var(--light-gray);
+}
+.movie-details__text {
+  font-size: var(--fs-9);
+  font-weight: var(--fw-500);
+  line-height: 1.8;
+  color: var(--gray-x);
+}
+.movie-details__stats {
+  display: flex;
+  gap: 15px;
+}
+.movie-details__stats .box {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  color: var(--gainsboro);
+  font-size: var(--fs-8);
+  font-weight: var(--fw-500);
+  border: 1px solid var(--gainsboro);
+  padding: 5px 10px;
+}
+.movie-details__stats .box ion-icon {
+  color: yellow;
 }/*# sourceMappingURL=app.css.map */
