--- a/assets/scss/sections/_service.scss
+++ b/assets/scss/sections/_service.scss
@@ -71,3 +71,22 @@
     }
   }
 }
+
+@media (min-width: 550px) {
+  .service {
+    &__wrapper {
+      max-width: 550px;
+      margin-inline: auto;
+    }
+    &__list {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    &__item {
+      display: flex;
+      gap: 30px;
+      &-icon {
+        flex-shrink: 0;
+      }
+    }
+  }
+}
