--- a/assets/scss/sections/_upcoming.scss
+++ b/assets/scss/sections/_upcoming.scss
@@ -124,3 +124,15 @@
     }
   }
 }
+
+@media (min-width: 550px) {
+  .upcoming {
+    &__wrapper {
+      max-width: 550px;
+      margin-inline: auto;
+    }
+    &__list {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
