--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -303,6 +303,59 @@ h3 {
   background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
 }
 
+@media (min-width: 550px) {
+  .header__wrapper {
+    max-width: 550px;
+    margin-inline: auto;
+  }
+}
+@media (min-width: 768px) {
+  .header__wrapper {
+    max-width: 768px;
+    margin-inline: auto;
+  }
+  .header .navbar__actions {
+    display: flex;
+    margin-left: auto;
+    align-items: center;
+    gap: 25px;
+    margin-right: 15px;
+  }
+  .header .search-btn {
+    color: var(--white);
+    position: relative;
+  }
+  .header .search-btn::after {
+    content: "";
+    position: absolute;
+    top: 1px;
+    background: var(--white);
+    right: -10px;
+    width: 2px;
+    height: 15px;
+    opacity: 60%;
+  }
+  .header .lang-container {
+    display: flex;
+    align-items: center;
+    font-size: var(--fs-6);
+  }
+  .header .lang-container label {
+    color: var(--emerald);
+  }
+  .header .lang-container select {
+    color: var(--white);
+    font-size: var(--fs-9);
+    font-weight: var(--fw-700);
+  }
+  .header .lang-container select option {
+    color: var(--black);
+  }
+  .header .lang-container select:focus {
+    outline: none;
+    border: none;
+  }
+}
 .footer {
   background: url("/assets/images/footer-bg.jpg") no-repeat center center/cover;
   padding-block: 80px 50px;
@@ -373,6 +426,30 @@ h3 {
   transition: var(--transition-2);
 }
 
+@media (min-width: 768px) {
+  .footer__brand {
+    max-width: 750px;
+    margin-inline: auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .footer__brand-logo {
+    margin: 0px;
+  }
+  .footer__brand-logo img {
+    width: 50px;
+  }
+  .footer__brand-logo h5 {
+    font-size: 18px;
+  }
+  .footer .quicklink {
+    max-width: 750px;
+    margin-inline: auto;
+    display: flex;
+    justify-content: space-between;
+  }
+}
 .hero {
   background: url("/assets/images/hero-bg.png") no-repeat center center/cover;
   height: 100vh;
@@ -422,6 +499,11 @@ h3 {
   .hero__wrapper {
     max-width: 550px;
     margin-inline: auto;
+  }
+}
+@media (min-width: 768px) {
+  .hero__wrapper {
+    max-width: 720px;
   }
 }
 .upcoming {
@@ -544,6 +626,7 @@ h3 {
   }
   .upcoming__list {
     grid-template-columns: repeat(2, 1fr);
+    gap: 45px 55px;
   }
 }
 .service {
@@ -794,6 +877,9 @@ h3 {
   color: var(--eerie-black);
   font-weight: var(--fw-500);
 }
+.cta__form {
+  position: relative;
+}
 .cta__form-input {
   font-size: var(--fs-9);
   color: var(--eerie-black);
@@ -821,6 +907,19 @@ h3 {
   .cta__wrapper {
     max-width: 550px;
     margin-inline: auto;
+  }
+}
+@media (min-width: 768px) {
+  .cta__form-btn {
+    position: absolute;
+    top: 3px;
+    right: 3px;
+    bottom: 3px;
+  }
+  .cta__form-btn:hover {
+    background: var(--emerald);
+    border: 1px solid var(--eerie-black);
+    color: var(--white);
   }
 }
 .movie-details {
