--- a/assets/scss/sections/_service.scss
+++ b/assets/scss/sections/_service.scss
@@ -90,3 +90,13 @@
     }
   }
 }
+
+@media (min-width: 991px) {
+  .service {
+    &__wrapper {
+      max-width: 950px;
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+}
