--- a/assets/scss/sections/_series.scss
+++ b/assets/scss/sections/_series.scss
@@ -165,3 +165,15 @@
     }
   }
 }
+
+@media (min-width: 991px) {
+  .series {
+    &__wrapper {
+      max-width: 950px;
+    }
+
+    &__list {
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
