--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -527,6 +527,7 @@ h3 {
     --fs-1: 45px;
   }
   .hero__wrapper {
+    width: 1000px;
     max-width: 550px;
     margin-inline: auto;
   }
@@ -534,6 +535,14 @@ h3 {
 @media (min-width: 768px) {
   .hero__wrapper {
     max-width: 720px;
+  }
+}
+@media (min-width: 991px) {
+  :root {
+    --fs-1: 65px;
+  }
+  .hero__wrapper {
+    max-width: 950px;
   }
 }
 .upcoming {
